--- a/Money-Bunny/src/app/login/login.component.html
+++ b/Money-Bunny/src/app/login/login.component.html
@@ -21,7 +21,7 @@
               
                 <div class="text-center">
                     <a href="#" class="input-style">Forgot password?</a><br>
-                    <span class="input-style">Not a member? <a routerLink="/register">Sign up</a></span>
+                    <span class="input-style">Not a member? <a routerLink="/register">Sign up</a><br><br></span>
                 </div>
             </form>
         </div>
