--- a/Money-Bunny/src/app/register/register.component.css
+++ b/Money-Bunny/src/app/register/register.component.css
@@ -16,6 +16,7 @@
     background-color: #66b719; 
 }
 
-.font-1p3rem {
-    font-size: 1.3rem;
+.font-error {
+    color: red;
+    font-size: 1.2rem;
 }
