--- a/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
+++ b/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
@@ -7,38 +7,40 @@
 
     <div class="row mt-5">
         <div class="col-12 col-sm-4">
-            <div class="card text-center">
-                <div class="card-header">
-                    <span class="font-weight-bold font-item mr-3">Card Details</span>
-                    <i class="fa fa-credit-card mb-color" style="font-size: 1.8rem;"></i>
+            <div class="card">
+                <div class="card-header d-flex justify-content-between">
+                    <span class="font-weight-bold card-mb-header">Card Details</span>
+                    <i class="fa fa-credit-card mb-color card-mb-icon"></i>
                 </div>
-                <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
-                <div class="card-body">
-                  <!-- <h5 class="card-title">Card title</h5> -->
-                  <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                <div class="card-body text-center">
+                  <h5 class="card-title">View your card details</h5>
+                  <a class="btn mb-button" routerLink="/login">Card Details</a>
                 </div>
               </div>
         </div>
         <div class="col-12 col-sm-4">
-            <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+          <div class="card">
+              <div class="card-header d-flex justify-content-between">
+                  <span class="font-weight-bold card-mb-header">Card Details</span>
+                  <i class="fa fa-credit-card mb-color card-mb-icon"></i>
               </div>
-        </div>
-        <div class="col-12 col-sm-4">
-            <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+              <div class="card-body text-center">
+                <h5 class="card-title">View your card details</h5>
+                <a class="btn mb-button" routerLink="/login">Card Details</a>
               </div>
-        </div>
+            </div>
+      </div>
+      <div class="col-12 col-sm-4">
+        <div class="card">
+            <div class="card-header d-flex justify-content-between">
+                <span class="font-weight-bold card-mb-header">Card Details</span>
+                <i class="fa fa-credit-card mb-color card-mb-icon"></i>
+            </div>
+            <div class="card-body text-center">
+              <h5 class="card-title">View your card details</h5>
+              <a class="btn mb-button" routerLink="/login">Card Details</a>
+            </div>
+          </div>
+    </div>
     </div>
 </div>
