Finished account dashboard and card select

--- a/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
+++ b/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
@@ -1,10 +1,9 @@
 <div class="container mt-4">
-  <!-- <div class="row my-4">
+  <div class="row my-4">
     <div class="col-12 col-sm-12 d-flex justify-content-center">
-      <h2 class="font-weight-bold">Welcome <span class="mb-color">{{this.auth.getCurrentUser()}}</span></h2>
+      <h2 class="font-weight-bold">Account <span class="mb-color">{{this.auth.getCurrentAccount()}}</span></h2>
     </div>
-  </div>  -->
-
+  </div> 
   <div class="row">
     <div class="col-12 col-sm-12">
       <div class="card">
@@ -12,9 +11,9 @@
           <span class="font-weight-bold card-mb-header">Account details</span>
           <i class="fa fa-credit-card mb-color card-mb-icon"></i>
         </div>
-        <div class="card-body text-center pl-0">
-          <div class="row" *ngIf="this.data[0]">
-            <div class="col-6 col-sm pl-0">
+        <div class="card-body text-center">
+          <div class="row" *ngIf="this.account && this.bank">
+            <div class="col-6 col-sm">
               <div class="row">
                 <div class="col-12">
                   <h4 class="mb-color font-weight-bold">Bank</h4>
@@ -34,7 +33,7 @@
               </div>
               <div class="row mt-2">
                 <div class="col-12">
-                  <h4 class="font-weight-bold">{{this.data[0]['IBAN']}}</h4>
+                  <h4 class="font-weight-bold">{{this.account['IBAN']}}</h4>
                 </div>
               </div>
             </div>
@@ -46,7 +45,7 @@
               </div>
               <div class="row mt-2">
                 <div class="col-12">
-                  <h4 class="font-weight-bold">{{this.data[0]['account_type']}}</h4>
+                  <h4 class="font-weight-bold">{{this.account['account_type']}}</h4>
                 </div>
               </div>
             </div>
@@ -58,7 +57,7 @@
               </div>
               <div class="row mt-2">
                 <div class="col-12">
-                  <h4 class="font-weight-bold">{{this.data[0]['balance'] + " " + this.data[0]['currency']}}</h4>
+                  <h4 class="font-weight-bold">{{this.account['balance'] + " " + this.account['currency']}}</h4>
                 </div>
               </div>
             </div>
@@ -72,36 +71,36 @@
     <div class="col-12 col-sm-4">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
-              <span class="font-weight-bold card-mb-header">Card Details</span>
+              <span class="font-weight-bold card-mb-header">Action</span>
               <i class="fa fa-credit-card mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
-            <h5 class="card-title">View your card details</h5>
-            <a class="btn mb-button" routerLink="/login">Card Details</a>
+            <h5 class="card-title">Information</h5>
+            <a class="btn mb-button" routerLink="/login">Action</a>
           </div>
         </div>
     </div>
     <div class="col-12 col-sm-4">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
-              <span class="font-weight-bold card-mb-header">Card Details</span>
+              <span class="font-weight-bold card-mb-header">Action</span>
               <i class="fa fa-credit-card mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
-            <h5 class="card-title">View your card details</h5>
-            <a class="btn mb-button" routerLink="/login">Card Details</a>
+            <h5 class="card-title">Information</h5>
+            <a class="btn mb-button" routerLink="/login">Action</a>
           </div>
         </div>
     </div>
     <div class="col-12 col-sm-4">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
-              <span class="font-weight-bold card-mb-header">Card Details</span>
+              <span class="font-weight-bold card-mb-header">Action</span>
               <i class="fa fa-credit-card mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
-            <h5 class="card-title">View your card details</h5>
-            <a class="btn mb-button" routerLink="/login">Card Details</a>
+            <h5 class="card-title">Information</h5>
+            <a class="btn mb-button" routerLink="/login">Action</a>
           </div>
         </div>
     </div>
