--- a/Money-Bunny/src/app/card-select/card-select.component.css
+++ b/Money-Bunny/src/app/card-select/card-select.component.css
@@ -1,16 +1,14 @@
 .mb-button {
-    border-color: white;
-	font-weight: bold;
-    font-size: 1.3rem;
+    border-color: #91E542;
+    font-size: 1.25rem;
     color: #142305;
-    background-color:white;
+    font-weight: 600;
+    background-color: #91E542;
 }
 
 .mb-button:hover {
-	font-weight: bold;
-    font-size: 1.3rem;
-    color: #66b719;
-    background-color: white; 
+    color: white;
+    background-color: #66b719;
 }
 
 .mb-button-selected {
@@ -38,4 +36,16 @@
 
 .font-1p3rem {
     font-size: 1.3rem;
+}
+
+.mb-color {
+    color: #91E542;
+}
+
+.account-link {
+    color: black;
+}
+
+.account-link:hover {
+    color: #91E542;
 }
