--- a/Money-Bunny/src/app/app.component.html
+++ b/Money-Bunny/src/app/app.component.html
@@ -1,16 +1,17 @@
 <nav class="navbar hr-bottom">
     <div class="navbar-brand d-flex align-items-center mr-0">
         <div class="navbar-logo">
-            <a [routerLink]="this.auth.isLoggedIn() ? ['/logged-in-menu'] : ['/']">
+            <a [routerLink]="this.auth.isLoggedIn() ? (this.auth.isAccountSet() ? ['account-dashboard'] : ['logged-in-menu']) : ['/']">
                 <img class="logo" src="assets/images/logo.png" alt="Money Bunny Logo">
             </a>
         </div>
         <div class="navbar-caption">
-            <a class="text-dark text-decoration-none font-weight-bold nav-text" [routerLink]="this.auth.isLoggedIn() ? ['logged-in-menu'] : ['/']">Money Bunny</a>
+            <a class="text-dark text-decoration-none font-weight-bold nav-text" [routerLink]="this.auth.isLoggedIn() ? (this.auth.isAccountSet() ? ['account-dashboard'] : ['logged-in-menu']) : ['/']">Money Bunny</a>
         </div>
     </div>
     <div class="nav-item d-none d-sm-block">
         <a class="btn mb-button mr-4" *ngIf="route.url.split('?')[0].slice(1) !== 'help'" routerLink="/help" [queryParams]="{page: this.route.url.slice(1)}">Help</a>
+        <a class="btn mb-button mr-4" *ngIf="this.auth.isAccountSet()" routerLink="/logged-in-menu" (click)="this.auth.unsetCurrentAccount()">Back to accounts</a>
         <a class="btn mb-button mr-2" *ngIf="this.auth.isLoggedIn()" routerLink="/" (click)="this.auth.SignOut()">Logout</a>
         <a class="btn mb-button mr-2" *ngIf="!this.auth.isLoggedIn()" routerLink="/login">Login / Sign up</a>
         <a class="dropdown">
