Finished Update Profile

--- a/Money-Bunny/src/app/login/login.component.html
+++ b/Money-Bunny/src/app/login/login.component.html
@@ -20,7 +20,7 @@
                 <button type="submit" class="btn btn-block mb-2 input-style mb-button">Login</button>
               
                 <div class="text-center">
-                    <a href="#" class="input-style">Forgot password?</a><br>
+                    <!-- <a href="#" class="input-style">Forgot password?</a><br> -->
                     <span class="input-style">Not a member? <a routerLink="/register">Sign up</a><br><br></span>
                 </div>
             </form>
