Deleted mockup and created transaction files

--- a/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
+++ b/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
@@ -68,7 +68,19 @@
   </div>
 
   <div class="row mt-4">
-    <div class="col-12 col-sm-4">
+    <div class="col-12 col-sm-4 mb-3">
+      <div class="card">
+          <div class="card-header d-flex justify-content-between">
+              <span class="font-weight-bold card-mb-header">Transaction</span>
+              <i class="fa fa-credit-card mb-color card-mb-icon"></i>
+          </div>
+          <div class="card-body text-center">
+            <h5 class="card-title">Make a new transaction to an account</h5>
+            <a class="btn mb-button" routerLink="/transaction">Select</a>
+          </div>
+        </div>
+    </div>
+    <div class="col-12 col-sm-4 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Action</span>
@@ -80,19 +92,7 @@
           </div>
         </div>
     </div>
-    <div class="col-12 col-sm-4">
-      <div class="card">
-          <div class="card-header d-flex justify-content-between">
-              <span class="font-weight-bold card-mb-header">Action</span>
-              <i class="fa fa-credit-card mb-color card-mb-icon"></i>
-          </div>
-          <div class="card-body text-center">
-            <h5 class="card-title">Information</h5>
-            <a class="btn mb-button" routerLink="/login">Action</a>
-          </div>
-        </div>
-    </div>
-    <div class="col-12 col-sm-4">
+    <div class="col-12 col-sm-4 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Action</span>
